# wlx-overlay-s

./: Cargo.toml  build.rs  run
.github/workflows/scripts/: appimage_build_wayvr_dashboard.sh
src/: config_wayvr.rs  state.rs
src/backend/: common.rs
src/backend/uidev/: mod.rs
src/backend/wayvr/: client.rs  comp.rs  display.rs  egl_data.rs  mod.rs  server_ipc.rs
src/graphics/: mod.rs
src/overlays/: cef.rs  keyboard.rs  mod.rs  screen.rs  wayvr.rs
src/res/: wayvr.yaml
wlxcefwrapper/: meson.build
wlxcefwrapper/assets/: index.html  script.js  script.ts  style.css  transpile.sh
wlxcefwrapper/src/: app.cpp  app.hpp  handler.cpp  handler.hpp  handler_sdl.cpp  interface.cpp  interface.h  interface_class.hpp  logs.cpp  logs.hpp  navbar_interface.cpp  navbar_interface.hpp  render_handler.cpp  render_handler.hpp  tab.cpp  tab.hpp  util.cpp  util.hpp  whereami.c
